# facebook-clone

./: .gitignore  README.md  config.local.env  docker-compose.yaml  package.json  pnpm-lock.yaml  pyproject.toml
backend/: Dockerfile  config.local.env  db.Dockerfile  pyproject.toml
backend/facebook_clone/: asyncpg.py  config.py  depend.py  main.py  response.py  tables.sql
backend/facebook_clone/business_model/: __init__.py  auth.py  friend.py  post.py  user.py
backend/facebook_clone/data_access_object/: __init__.py  auth.py  friend.py  post.py  user.py
backend/facebook_clone/endpoint/: auth.py  friend.py  post.py  user.py
backend/facebook_clone/schema/: friend.py  post.py  user.py
facebook_clone/: config.py  depend.py  main.py  tables.sql  user.sql
facebook_clone/business_model/: __init__.py  post.py  user.py
facebook_clone/data_access_object/: __init__.py  post.py  user.py
facebook_clone/endpoint/: post.py  user.py
facebook_clone/schema/: post.py  user.py
frontend/: .env.local  .eslintrc.cjs  Dockerfile  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: _axios.ts
frontend/src/components/: AuthRoute.tsx  Avatar.tsx  Button.tsx  FullScreenLoading.tsx  Input.tsx  Mask.tsx  Modal.tsx  Popover.tsx  Spin.tsx
frontend/src/constants/: common.ts  userContext.ts
frontend/src/context/: LoadingContextProvider.tsx  PostContextProvider.tsx  ToastContextProvider.tsx  UserContextProvider.tsx
frontend/src/hooks/: useEditProfile.tsx  useForm.ts  useInfiniteScroll.ts  (+5 more)
(+136 files in other folders)
