[tool.poetry]
name = "facebook-clone"
version = "0.1.0"
description = ""
authors = ["Glenn8119 <uuu0622@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.27.1" }
asyncpg = "^0.29.0"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
pydantic-settings = "^2.2.1"
python-multipart = "^0.0.9"


[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
autopep8 = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
